[gd_scene load_steps=45 format=3 uid="uid://beuct1pjdlayy"]

[ext_resource type="Script" uid="uid://dgm2vkm51m46i" path="res://Utilities/scripts/main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://b8kaqd0dtqsp1" path="res://Entities/player.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://csddlxbt5psnk" path="res://Entities/main_camera.tscn" id="3_dg77c"]
[ext_resource type="Script" uid="uid://d10fwvktnsx7m" path="res://Entities/EntityScripts/npc.gd" id="5_7mycd"]
[ext_resource type="Script" uid="uid://b5yrwvs426aci" path="res://World/WorldScripts/outside.gd" id="5_ycdy4"]
[ext_resource type="Script" uid="uid://bc2ilamjayd16" path="res://World/WorldScripts/room.gd" id="6_4c57u"]
[ext_resource type="PackedScene" uid="uid://3dt1w7lckdyq" path="res://Entities/interaction_detector.tscn" id="6_272bh"]
[ext_resource type="PackedScene" uid="uid://dr2o8ey3n88sr" path="res://World/room.tscn" id="7_4c57u"]
[ext_resource type="PackedScene" uid="uid://b775wvigqexbq" path="res://World/stairs_left.tscn" id="7_5vw27"]
[ext_resource type="PackedScene" uid="uid://bc888yk804ya" path="res://World/door.tscn" id="7_kek77"]
[ext_resource type="PackedScene" uid="uid://cfn5yvo0kg0up" path="res://World/floor.tscn" id="8_efxa6"]
[ext_resource type="PackedScene" uid="uid://oji083qkjua5" path="res://World/wall.tscn" id="9_dg77c"]
[ext_resource type="Script" uid="uid://bq22deee5mwhr" path="res://World/WorldScripts/back_room.gd" id="11_efxa6"]
[ext_resource type="Script" path="res://music.gd" id="12_dg77c"]
[ext_resource type="Script" uid="uid://bn07hwlvtlb6h" path="res://World/WorldScripts/room2.gd" id="13_w48qg"]
[ext_resource type="Script" uid="uid://dmejjh2fyets1" path="res://World/WorldScripts/hallway.gd" id="13_ycdy4"]
[ext_resource type="PackedScene" uid="uid://b6tahrgqxdvcq" path="res://audio/fmod bank loader.tscn" id="17_yaehf"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1bvp3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5vw27"]
albedo_color = Color(0.919521, 0.55063, 0.860905, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_lquwl"]
material = SubResource("StandardMaterial3D_5vw27")
height = 2.5

[sub_resource type="BoxShape3D" id="BoxShape3D_kek77"]

[sub_resource type="BoxShape3D" id="BoxShape3D_06yk2"]
size = Vector3(10, 2.5, 2.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_bv50f"]
size = Vector3(11, 0.5, 3)

[sub_resource type="BoxMesh" id="BoxMesh_06yk2"]
size = Vector3(11, 0.5, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_efxa6"]
size = Vector3(11, 4, 3)

[sub_resource type="QuadMesh" id="QuadMesh_dg77c"]
size = Vector2(2, 3)

[sub_resource type="QuadMesh" id="QuadMesh_yaehf"]
size = Vector2(8, 3)

[sub_resource type="QuadMesh" id="QuadMesh_074og"]
size = Vector2(1, 1.2)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_yaehf"]
points = PackedVector3Array(4, 1.5, 0, 4, -1.5, 0, -4, 1.5, 0, -4, -1.5, 0)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_074og"]
points = PackedVector3Array(-1, -1.5, 0, 1, -1.5, 0, -1, 1.5, 0, 1, 1.5, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_ycdy4"]
size = Vector3(11, 4, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_dg77c"]
size = Vector3(11, 0.5, 4)

[sub_resource type="BoxMesh" id="BoxMesh_ycdy4"]
size = Vector3(11, 0.5, 4)

[sub_resource type="QuadMesh" id="QuadMesh_efxa6"]
size = Vector2(11, 3)

[sub_resource type="BoxMesh" id="BoxMesh_efxa6"]
size = Vector3(0.2, 3, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_w48qg"]
size = Vector3(11, 3, 3)

[sub_resource type="QuadMesh" id="QuadMesh_cegan"]
size = Vector2(11, 3)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_cegan"]
points = PackedVector3Array(5.5, 1.5, 0, 5.5, -1.5, 0, -5.5, 1.5, 0, -5.5, -1.5, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_yaehf"]
size = Vector3(11, 0.5, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_074og"]
size = Vector3(6, 0.5, 1)

[sub_resource type="BoxMesh" id="BoxMesh_074og"]
size = Vector3(11, 0.5, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_vivmo"]
size = Vector3(17, 4, 3)

[sub_resource type="BoxMesh" id="BoxMesh_dg77c"]
size = Vector3(17, 0.5, 3)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ycdy4"]
data = PackedVector3Array(-8.5, 0.25, 1.5, 8.5, 0.25, 1.5, -8.5, -0.25, 1.5, 8.5, 0.25, 1.5, 8.5, -0.25, 1.5, -8.5, -0.25, 1.5, 8.5, 0.25, -1.5, -8.5, 0.25, -1.5, 8.5, -0.25, -1.5, -8.5, 0.25, -1.5, -8.5, -0.25, -1.5, 8.5, -0.25, -1.5, 8.5, 0.25, 1.5, 8.5, 0.25, -1.5, 8.5, -0.25, 1.5, 8.5, 0.25, -1.5, 8.5, -0.25, -1.5, 8.5, -0.25, 1.5, -8.5, 0.25, -1.5, -8.5, 0.25, 1.5, -8.5, -0.25, -1.5, -8.5, 0.25, 1.5, -8.5, -0.25, 1.5, -8.5, -0.25, -1.5, 8.5, 0.25, 1.5, -8.5, 0.25, 1.5, 8.5, 0.25, -1.5, -8.5, 0.25, 1.5, -8.5, 0.25, -1.5, 8.5, 0.25, -1.5, -8.5, -0.25, 1.5, 8.5, -0.25, 1.5, -8.5, -0.25, -1.5, 8.5, -0.25, 1.5, 8.5, -0.25, -1.5, -8.5, -0.25, -1.5)

[node name="Main" type="Node3D"]
script = ExtResource("1_1bvp3")

[node name="Player" parent="." instance=ExtResource("2_0xm2m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 1)
floor_constant_speed = true

[node name="MainCamera" parent="." instance=ExtResource("3_dg77c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.444, 2, 9.6)

[node name="FmodListener3D" type="FmodListener3D" parent="MainCamera"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="NPC" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0.184765, -1)
collision_layer = 0
collision_mask = 0
script = ExtResource("5_7mycd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_1bvp3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NPC"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12565, 0)
mesh = SubResource("CylinderMesh_lquwl")

[node name="InteractionDetector" parent="NPC" instance=ExtResource("6_272bh")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPC/InteractionDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2)
shape = SubResource("BoxShape3D_kek77")

[node name="ConversationCameraPosition" type="Node3D" parent="NPC"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24974, 7.6)

[node name="Outside" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.25, 1, 0)
script = ExtResource("5_ycdy4")

[node name="RoomArea" type="CollisionShape3D" parent="Outside"]
shape = SubResource("BoxShape3D_06yk2")

[node name="Floor" type="StaticBody3D" parent="Outside"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.25, 0)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Outside/Floor"]
shape = SubResource("BoxShape3D_bv50f")
debug_color = Color(0, 0.6, 0.701961, 0.270588)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Outside/Floor"]
mesh = SubResource("BoxMesh_06yk2")
skeleton = NodePath("../..")

[node name="Room" parent="." instance=ExtResource("7_4c57u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0)
script = ExtResource("6_4c57u")

[node name="RoomArea" type="CollisionShape3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_efxa6")
debug_color = Color(0, 0.6, 0.701961, 0.513726)

[node name="OmniLight3D" type="OmniLight3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.29609, 2.39456, 1.41032)
shadow_enabled = true
omni_range = 40.0

[node name="OmniLight3D2" type="OmniLight3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.22788, 2.39456, 1.40986)
omni_range = 40.0

[node name="ThingsToHide" type="Node3D" parent="Room"]

[node name="BackWall" type="StaticBody3D" parent="Room/ThingsToHide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.011703, 1.49595, -1.49338)
collision_layer = 2
collision_mask = 0

[node name="BackWallMesh" type="MeshInstance3D" parent="Room/ThingsToHide/BackWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 0, 0)
mesh = SubResource("QuadMesh_dg77c")
skeleton = NodePath("")

[node name="BackWallMesh2" type="MeshInstance3D" parent="Room/ThingsToHide/BackWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)
mesh = SubResource("QuadMesh_yaehf")
skeleton = NodePath("")

[node name="BackWallMesh3" type="MeshInstance3D" parent="Room/ThingsToHide/BackWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.9, 0)
mesh = SubResource("QuadMesh_074og")
skeleton = NodePath("")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Room/ThingsToHide/BackWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)
shape = SubResource("ConvexPolygonShape3D_yaehf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/ThingsToHide/BackWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 0, 0)
shape = SubResource("ConvexPolygonShape3D_074og")

[node name="StairsLeft" parent="Room/ThingsToHide" instance=ExtResource("7_5vw27")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.02552, 0, -1)

[node name="LeftWall" parent="Room" instance=ExtResource("9_dg77c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.3999, 1.50095, -2.30074e-05)

[node name="RightWall" parent="Room" instance=ExtResource("9_dg77c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.4, 1.5, 0)

[node name="Floor" parent="Room" instance=ExtResource("8_efxa6")]

[node name="HallwayDoor" parent="Room" instance=ExtResource("7_kek77")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 5.403, 0, -0.25)

[node name="Door" parent="Room" instance=ExtResource("7_kek77")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -1.5)

[node name="BackRoom" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -4.003)
collision_layer = 2
script = ExtResource("11_efxa6")

[node name="RoomArea" type="CollisionShape3D" parent="BackRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_ycdy4")
debug_color = Color(4.81307e-07, 0.6058, 0.665263, 0.42)

[node name="BackRoomFloor" type="StaticBody3D" parent="BackRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0.5)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="BackRoom/BackRoomFloor"]
shape = SubResource("BoxShape3D_dg77c")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BackRoom/BackRoomFloor"]
mesh = SubResource("BoxMesh_ycdy4")
skeleton = NodePath("../../..")

[node name="BackRoomCeiling" type="StaticBody3D" parent="BackRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.25, 0.5)
collision_layer = 2
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="BackRoom/BackRoomCeiling"]
mesh = SubResource("BoxMesh_ycdy4")
skeleton = NodePath("../../../..")

[node name="BackRoomBackWall" type="MeshInstance3D" parent="BackRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -1.5)
mesh = SubResource("QuadMesh_efxa6")

[node name="BackLeftWall" type="StaticBody3D" parent="BackRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.4, 1.5, 0.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BackRoom/BackLeftWall"]
mesh = SubResource("BoxMesh_efxa6")

[node name="BackRightWall" type="StaticBody3D" parent="BackRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.4, 1.5, 0.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BackRoom/BackRightWall"]
mesh = SubResource("BoxMesh_efxa6")

[node name="OmniLight3D" type="OmniLight3D" parent="BackRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.68692, 2.34777, 0.893448)
shadow_enabled = true
omni_range = 15.0

[node name="UpperRoom" parent="." instance=ExtResource("7_4c57u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 3.5, 0)
collision_layer = 2
script = ExtResource("13_w48qg")

[node name="RoomArea" type="CollisionShape3D" parent="UpperRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_w48qg")
debug_color = Color(0, 0.6, 0.701961, 0.513726)

[node name="ThingsToHide" type="Node3D" parent="UpperRoom"]

[node name="LeftWall" parent="UpperRoom/ThingsToHide" instance=ExtResource("9_dg77c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.3999, 1.50095, -2.30074e-05)

[node name="RightWall" parent="UpperRoom/ThingsToHide" instance=ExtResource("9_dg77c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.4, 1.5, 0)

[node name="UpperLevel" parent="UpperRoom/ThingsToHide" instance=ExtResource("8_efxa6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)

[node name="BackWall" type="StaticBody3D" parent="UpperRoom/ThingsToHide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.011703, 1.49595, -1.49338)
collision_layer = 2
collision_mask = 0

[node name="BackWallMesh" type="MeshInstance3D" parent="UpperRoom/ThingsToHide/BackWall"]
mesh = SubResource("QuadMesh_cegan")
skeleton = NodePath("")

[node name="BackWallCollision" type="CollisionShape3D" parent="UpperRoom/ThingsToHide/BackWall"]
shape = SubResource("ConvexPolygonShape3D_cegan")

[node name="OmniLight3D" type="OmniLight3D" parent="UpperRoom/ThingsToHide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.29609, 2.39456, 1.41032)
shadow_enabled = true
omni_range = 40.0

[node name="Floor" type="StaticBody3D" parent="UpperRoom"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="UpperRoom/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0.5)
shape = SubResource("BoxShape3D_yaehf")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="UpperRoom/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, -0.25, -1)
shape = SubResource("BoxShape3D_074og")

[node name="MeshInstance3D" type="MeshInstance3D" parent="UpperRoom/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
mesh = SubResource("BoxMesh_074og")

[node name="Hallway" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 9.5, -0.25, -7)
collision_layer = 0
script = ExtResource("13_ycdy4")

[node name="RoomArea" type="CollisionShape3D" parent="Hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)
shape = SubResource("BoxShape3D_vivmo")

[node name="HallwayFloor" type="StaticBody3D" parent="Hallway"]
collision_layer = 2
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Hallway/HallwayFloor"]
mesh = SubResource("BoxMesh_dg77c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hallway/HallwayFloor"]
shape = SubResource("ConcavePolygonShape3D_ycdy4")

[node name="Audio" type="Node" parent="."]

[node name="Music" type="FmodEventEmitter3D" parent="Audio"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
event_name = "event:/music"
event_guid = "{736a96ee-aebb-4593-a094-6f5e9ab9f738}"
autoplay = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.5, -0.5)
script = ExtResource("12_dg77c")

[node name="CrowdSounds" type="FmodEventEmitter3D" parent="Audio"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
event_name = "event:/crowd"
event_guid = "{9e4d86e6-afa7-406e-ba12-08656547d254}"
autoplay = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.5, -0.5)
script = null

[node name="OutdoorAmbience" type="FmodEventEmitter3D" parent="Audio"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
event_name = "event:/outdoor ambience"
event_guid = "{5124a576-f271-4033-bde3-5a862acd37d3}"
autoplay = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 2, -2)
script = null

[node name="FmodBankLoader" parent="." instance=ExtResource("17_yaehf")]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[connection signal="body_entered" from="Outside" to="Outside" method="_on_body_entered"]
[connection signal="body_entered" from="Room" to="Room" method="_on_body_entered"]
[connection signal="body_entered" from="Room" to="Audio/Music" method="_on_room_body_entered"]
[connection signal="body_exited" from="Room" to="Room" method="_on_body_exited"]
[connection signal="body_entered" from="BackRoom" to="BackRoom" method="_on_body_entered"]
[connection signal="body_entered" from="UpperRoom" to="UpperRoom" method="_on_body_entered"]
[connection signal="body_entered" from="Hallway" to="Hallway" method="_on_body_entered"]
